[PE] GeometryMapper::LocalToAncestorClipRect() should ignore effects

Bug: 809102
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Id97c6766f962904f493037b08ebab09439c9a627