third_party/WebKit/Source/platform/graphics/paint/GeometryMapper.cpp
@@ -247,16 +247,9 @@ FloatClipRect GeometryMapper::LocalToAncestorClipRect(
 
   FloatClipRect result;
   bool success = false;
-
-  if (local_state.Effect() != ancestor_state.Effect()) {
-    SlowLocalToAncestorVisualRectWithEffects(local_state, ancestor_state,
-                                             result, clip_behavior, success);
-  } else {
-    result = LocalToAncestorClipRectInternal(
-        local_state.Clip(), ancestor_state.Clip(), ancestor_state.Transform(),
-        clip_behavior, success);
-  }
-
+  result = LocalToAncestorClipRectInternal(
+      local_state.Clip(), ancestor_state.Clip(), ancestor_state.Transform(),
+      clip_behavior, success);
   DCHECK(success);
   return result;
 }
